--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.contextPath=/java-api
 spring.datasource.url=jdbc:mysql://localhost:3306/javadb?useUnicode=yes&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.password=root
 spring.sql.init.encoding=UTF-8
 spring.jpa.generate-ddl=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
